--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-tactile
+title: Business/Organization Advertisement/Acknowledgement Registration Form
+description: Form for TCHS c/o 1991 to keep track of Businesses and Oraganizations that want to be part of our Advertisement panphlet.
